<resources>
    <string name="app_name">Forecast</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_activity">Activitas</string>
    <string name="title_ketentuan">Ketentuan</string>
    <string name="title_profile">Profile</string>

    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="copyright">Copyright Ⓒ Teknik Informatika UNILA - 2020</string>
    <string name="bidder">bidder</string>
    <string name="slogan">SIG mengenai Tsunami 2018 pada Kunjir, Kalianda, Lampung Selatan</string>
    <string name="name">Forecast</string>
    <string name="custom_dialog">This is custom dialog</string>
    <string name="example">Example</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="icon">icon</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ubah_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="password_lama">Old Password</string>
    <string name="password_baru">New Password</string>
    <string name="konfirmasi_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="popup_title">Popup Title..</string>
    <string name="popup_message">Write message here..</string>

    <string name="about_us">Tentang Kami</string>
    <string name="tujuan_aplikasi">Aplikasi ini bertujuan untuk memberikan informasi mengenai luas daerah dampak Tsunami tahun 2018 pada Desa Kunjir, Kalianda, Lampung Selatan</string>
    <string name="pengembang">Developer</string>
    <string name="developer">Nanda Kista Permana (1715061015)</string>
    <string name="tujuan_khusus">Adapun tujuan khusus dari pembuatan aplikasi ini adalah untuk memenuhi kurikulum dari mata kuliah Sistem Informasi Geografis di Program Studi Teknik Informatika Universitas Lampung</string>

    <string name="latarbelakang">Beberapa bulan sebelum tsunami terjadi, Gunung Anak Krakatau menunjukkan peningkatan aktivitas, dengan terjadinya letusan pada 21 Desember 2018 selama 2 menit hingga menyemburkan abu vulkanik setinggi 400 meter (1300 ft)</string>
    <string name="about_tsunami">Pada tanggal 22 Desember 2018, peristiwa tsunami yang disebabkan oleh letusan Anak Krakatau di Selat Sunda menghantam daerah pesisir Banten dan Lampung, Indonesia.</string>
    <string name="korban">Berdasarkan data dari Humas BNPB menyatakan bahwa 429 orang meninggal, 1.485 orang luka-luka, 154 orang hilang, 16.082 orang mengungsi. Sedangkan pada Desa Kunjir, Kalianda sendiri korban meninggal mencapai 24 korban</string>
    <string name="reaksi_internasional">Dari luar negeri, Pemerintah Malaysia siap membantu penanganan bencana ini. Presiden Singapura, Halimah Yacob, dan PM Singapura Lee Hsien Loong juga mengirimkan surat kedukacitaan kepada Presiden Joko Widodo. Kedutaan besar Singapura di Jakarta dan Konsulat Jenderalnya di Medan juga selalu terhubung dengan otoritas lokal dan memantau situasi dari dekat.
    Sementara, Perdana Menteri Australia Scott Morrison menyatakan negaranya akan menawarkan bantuan ke daerah yang terkena dampak, serta mengirimkan belasungkawa melalui Twitter.</string>
    <string name="kronologi">Menurut warga desa Bapak Iyung bahwa Sekitar 21.45 WIB Terdengar suara  Tidak lama kemudian terdapat ombak besar yang menghantam desa. Terdapat 3x ombak besar yang menghantam Desa Way Muli.
        Menurut saksi mata ombak disertai dengan tanah dengan ketinggian kurang lebih 6m dari permukaan air laut. Menurut masyarakat di Way Muli terjadinya tsunami bukan dikarenakan gempa bumi, melainkan longsornya tanah ke laut sehingga menyebabkan ombak. </string>

</resources>
