<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/splash_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo_unila"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_below="@+id/splash_logo"
            android:id="@+id/tv_logo_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:textSize="40sp"
            android:fontFamily="@font/ubuntu_bold"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:paddingHorizontal="20dp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:textSize="16sp"
            android:layout_below="@id/tv_logo_nama"
            android:textColor="@color/colorWhite"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textSize="14sp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        tools:ignore="SmallSp" />
</RelativeLayout>