<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <LinearLayout
        android:id="@+id/layouttb"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/bb_Tsunami"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:tint="@color/colorWhite"
            android:layout_gravity="center_vertical"
            android:paddingStart="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Tentang Tsunami Selat Sunda 2018"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingEnd="44dp"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_below="@+id/layouttb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_marginTop="35dp"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/tugu"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="Monumen korban tsunami selat sunda 2018"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tsunami Selat Sunda 2018"
                style="@style/h2TextTheme"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_tsunami"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Latar Belakang"
                style="@style/h2TextTheme"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/latarbelakang"/>

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/iv_detail_photo_tsunami"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:auto_cycle="false"
                android:layout_marginTop="20dp"
                android:background="@drawable/img_no_connect"
                app:period="1000"
                app:delay="0"
                app:placeholder="@color/colorWhite"
                app:error_image="@drawable/img_no_connect"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="Gambar dan Foto Tsunami Selat Sunda 2018"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kronologi"
                style="@style/h2TextTheme"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kronologi"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Korban"
                style="@style/h2TextTheme"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/korban"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Reaksi Internasional"
                style="@style/h2TextTheme"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reaksi_internasional"/>



        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingVertical="@dimen/activity_vertical_margin"
            android:text="@string/copyright"/>
    </RelativeLayout>



</LinearLayout>