<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.login.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:background="@color/colorWhite"
        android:id="@+id/tb_ubah_password"/>

    <androidx.core.widget.NestedScrollView
        android:layout_below="@id/tb_ubah_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="15dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="50dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_ubah_password_old_password_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxBackgroundMode="outline"
                app:hintTextAppearance="@style/HintText"
                app:errorTextAppearance="@style/ErrorText"
                app:passwordToggleEnabled="true"
                android:paddingBottom="5dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_ubah_password_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_lama"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="15dp"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_ubah_password_new_password_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxBackgroundMode="outline"
                app:passwordToggleEnabled="true"
                app:hintTextAppearance="@style/HintText"
                app:errorTextAppearance="@style/ErrorText"
                android:paddingBottom="5dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_ubah_password_new_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password_baru"
                android:textSize="16sp"
                android:imeOptions="actionNext"
                android:paddingHorizontal="15dp"
                android:paddingVertical="14dp"
                android:inputType="textPassword"
                android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_ubah_password_confirm_password_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxBackgroundMode="outline"
                app:hintTextAppearance="@style/HintText"
                app:errorTextAppearance="@style/ErrorText"
                android:paddingBottom="5dp"
                app:passwordToggleEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_ubah_password_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/konfirmasi_password"
                    android:textSize="16sp"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="14dp"
                    android:inputType="textPassword"
                    android:imeOptions="actionNext"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:id="@+id/btn_ubah_password_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_biru"
                android:text="@string/save"
                android:textColor="#fff"
                android:textSize="@dimen/text_size_button"
                android:textStyle="bold"
                android:focusable="true" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>